Rota do BT Cancelar corregida

--- a/src/app/Comp/cadastro-produtos/cadastro-produtos.component.html
+++ b/src/app/Comp/cadastro-produtos/cadastro-produtos.component.html
@@ -18,5 +18,5 @@
         <input type="number" id="nome3" class="form-control" [(ngModel)]="DdProduto.preco" name="Preço" required>
     </div>
     <button type="submit" class="btn btn-success me-3" >{{DdProduto.id ? "Atualizar":"Cadastrar"}}</button>
-    <a routerLink="/painel-pricipal" class="btn btn-secondary">Cancelar</a>
+    <a routerLink="/painel-principal" class="btn btn-secondary">Cancelar</a>
 </form>
